finished about page and integration of remark plugin

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "personal-website",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Personal website and blog",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -14,11 +14,19 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "babel-plugin-styled-components": "^1.10.7",
-    "gatsby": "^2.19.45",
+    "gatsby": "^2.21.9",
+    "gatsby-image": "^2.4.0",
     "gatsby-plugin-styled-components": "^3.3.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-transformer-remark": "^2.8.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
