--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.21.9",
     "gatsby-image": "^2.4.0",
+    "gatsby-plugin-manifest": "^2.4.1",
+    "gatsby-plugin-offline": "^3.2.0",
+    "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-styled-components": "^3.3.0",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-remark": "^2.8.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
     "redux": "^4.0.5",
     "styled-components": "^5.1.0"
   },
