--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -d master"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -21,12 +22,16 @@
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.21.9",
     "gatsby-image": "^2.4.0",
+    "gatsby-plugin-feed": "^2.5.1",
     "gatsby-plugin-manifest": "^2.4.1",
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
+    "gatsby-plugin-sharp": "^2.6.0",
     "gatsby-plugin-styled-components": "^3.3.0",
+    "gatsby-remark-images": "^3.3.0",
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-remark": "^2.8.4",
+    "gatsby-transformer-sharp": "^2.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
@@ -34,6 +39,7 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "prettier": "^1.19.1"
   },
   "repository": {
