--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-source-filesystem": "^2.3.0",
     "gatsby-transformer-remark": "^2.8.4",
     "gatsby-transformer-sharp": "^2.5.1",
+    "highlight.js": "^10.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
