--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "gatsby-plugin-offline": "^3.2.0",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-sharp": "^2.6.0",
+    "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-styled-components": "^3.3.0",
     "gatsby-remark-images": "^3.3.0",
+    "gatsby-remark-vscode": "^3.0.1",
     "gatsby-source-filesystem": "^2.3.19",
     "gatsby-transformer-remark": "^2.8.4",
     "gatsby-transformer-sharp": "^2.5.1",
