--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "gatsby-source-filesystem": "^2.3.19",
     "gatsby-transformer-remark": "^2.8.4",
     "gatsby-transformer-sharp": "^2.5.1",
-    "highlight.js": "^10.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
@@ -42,6 +41,7 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "eslint": "^7.4.0",
     "gh-pages": "^2.2.0",
     "prettier": "^1.19.1"
   },
